doc/config/load-iptables.conf
# Generated by iptables-save v1.6.0 on Thu Sep  1 11:31:41 2016
*mangle
:PREROUTING ACCEPT [164:17638]
:INPUT ACCEPT [164:17638]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [115:15528]
:POSTROUTING ACCEPT [115:15528]
COMMIT
# Completed on Thu Sep  1 11:31:41 2016
# Generated by iptables-save v1.6.0 on Thu Sep  1 11:31:41 2016
*security
:INPUT ACCEPT [164:17638]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [115:15528]
COMMIT
# Completed on Thu Sep  1 11:31:41 2016
# Generated by iptables-save v1.6.0 on Thu Sep  1 11:31:41 2016
*nat
:PREROUTING ACCEPT [3:192]
:INPUT ACCEPT [3:192]
:OUTPUT ACCEPT [7:436]
:POSTROUTING ACCEPT [7:436]
COMMIT
# Completed on Thu Sep  1 11:31:41 2016
# Generated by iptables-save v1.6.0 on Thu Sep  1 11:31:41 2016
*raw
:PREROUTING ACCEPT [164:17638]
:OUTPUT ACCEPT [115:15528]
COMMIT
# Completed on Thu Sep  1 11:31:41 2016
# Generated by iptables-save v1.6.0 on Thu Sep  1 11:31:41 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [115:15528]
:ICMP - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A TCP -p tcp -m tcp --dport 1204 -j ACCEPT
-A TCP -p tcp -m tcp --dport 443 -j ACCEPT
-A TCP -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Thu Sep  1 11:31:41 2016
