doc/config/mongo-iptables.conf
# Generated by iptables-save v1.6.0 on Thu Sep  1 15:09:50 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 10.136.11.166/32 -p tcp -m tcp --dport 27017 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.136.12.54/32 -p tcp -m tcp --dport 27017 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp --dport 1204 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A OUTPUT -d 10.136.11.166/32 -p tcp -m tcp --sport 27017 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.136.12.54/32 -p tcp -m tcp --sport 27017 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 1204 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Thu Sep  1 15:09:50 2016
